# leagal-contract

./: .openenvignore  Dockerfile  README.md  __init__.py  c.py  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py  v.py
server/: __init__.py  app.py  environment.py  tasks.py
