[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legalcontractreview"
version = "0.1.0"
description = "Legalcontractreview environment for OpenEnv"
requires-python = ">=3.10"

dependencies = [
    "openenv-core>=0.2.2",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

# ✅ FIXED ENTRYPOINT
[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

# ✅ IMPORTANT (for package detection)
[tool.setuptools.packages.find]
where = ["."]
include = ["legalcontractreview"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "processed/*.json"]